# learn_or_skip_airflow

./: .gitignore  README.md  airflow.cfg  main.py  pyproject.toml  requirements.txt  run_dashboard.py
.astro/: config.yaml
dags/: generate_transactions_dag.py  save_to_database_dag.py
src/: __init__.py  generate_bank_transactions.py  generate_transactions.py  save_to_database.py
src/dags/: tasks.py
src/dashboard/: __init__.py  app.py
src/data_generators/: __init__.py  bank_transaction_generator.py  generate_transactions.py  transactions.py
src/database/: __init__.py  db_manager.py  operations.py
src/models/: transaction.py
src/utils/: constants.py
